# npls

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
npls/: __init__.py  npls.py
npls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
