[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npls"
version = "0.0.7"
description = "It is a Python library for the N-PLS1 regression with L1 and L2-regularization."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Andrey Ferubko", email = "ferubko1999@yandex.ru"},
    {name = "Ivan Krylov"}
]
maintainers = [
    {name = "Andrey Ferubko", email = "ferubko1999@yandex.ru"}
]
dependencies = [
    "numpy",
    "scikit-learn",
    "signal_noise"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/89605502155/npls"
Download = "https://github.com/89605502155/npls/archive/main.zip"

# Исправленная секция для dev-зависимостей (новый формат)
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["npls"]

[tool.setuptools.package-data]
npls = ["*.py"]

# Опционально: настройки для форматирования и линтинга
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"